Page MenuHome GnuPG

--export-options export-minimal does not work with --export-secret-keys
Closed, ResolvedPublic

Description

This was originally reported by Peter Lebbing over on
https://lists.gnupg.org/pipermail/gnupg-users/2017-February/057774.html

0 dkg@alice:~$ gpg --export-secret-keys $PGPID | wc

3474   12844  543296

0 dkg@alice:~$ gpg --export-options export-minimal --export-secret-keys $PGPID | wc

3469   12835  543296

0 dkg@alice:~$ gpg --export-options export-minimal --export $PGPID | wc

107     533   20349

0 dkg@alice:~$ gpg --export $PGPID | wc

4272   15601  656968

0 dkg@alice:~$

export-minimal should work with --export-secret-keys in the way it works with
--export.

(it's also weird that --export produces more data than --export-secret-keys, but
that might be a different bug)

Details

Version
2.1.18

Event Timeline

dkg set Version to 2.1.18.
dkg added a subscriber: dkg.

Simply not implemented. Will be in 2.1.19

werner claimed this task.
werner removed a project: In Progress.